# dsv

./: Cargo.toml  README.md  build.sh  dsv  dsv.pypy  flake.nix  make-completions.sh  nightly-release.sh  pyproject.toml  release.sh  tbl
.github/workflows/: nightly.yml
_dsv/: __main__.py  _base.py  _column_slicer.py  _pipeline.py  _shtab.py  _table.py  _utils.py  cat.py  cut.py  exec_.py  exec_filter.py  exec_groupby.py  flip.py  fromhtml.py  fromjson.py  frommarkdown.py  grep.py  head.py  join.py  page.py  paste.py  pipe.py  pipeline.py  pretty.py  py.py  py_filter.py  py_groupby.py  replace.py  reshape_long.py  reshape_wide.py  set_header.py  sort.py  sqlite.py  summary.py  tac.py  tail.py  tocsv.py  tojson.py  tomarkdown.py  uniq.py  (+1 more)
_tbl/: _base.py  _utils.py  cat.py  cut.py  exec_.py  exec_filter.py  flip.py  fromjson.py  grep.py  head.py  join.py  paste.py  replace.py  set_header.py  sqlite.py  tac.py  tail.py  tojson.py  totsv.py
completions/: dsv.bash  dsv.zsh
nix/: package-python.nix  package-rust.nix
src/: base.rs  cat.rs  column_slicer.rs  head.rs  io.rs  main.rs  python.rs  subcommands.rs  tail.rs  utils.rs  writer.rs
src/subcommands/: _pipeline.rs  cat.rs  cut.rs  exec.rs  exec_filter.rs  exec_groupby.rs  flip.rs  fromhtml.rs  fromjson.rs  frommarkdown.rs  grep.rs  head.rs  join.rs  page.rs  paste.rs  pipe.rs  pretty.rs  py.rs  py_filter.rs  py_groupby.rs  replace.rs  reshape_long.rs  reshape_wide.rs  set_header.rs  sort.rs  sqlite.rs  summary.rs  tac.rs  tail.rs  tocsv.rs  tojson.rs  tomarkdown.rs  totsv.rs  uniq.rs  xargs.rs
