[package]
name = "dsv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
bstr = { version = "1.12.0", features = ["unicode"] }
clap = { version = "4.5.42", features = ["derive", "wrap_help"] }
colorutils-rs = "0.7.5"
once_cell = "1.21.3"
quick-xml = "0.38.1"
regex = "1.11.1"
serde_json = { version = "1.0.142", features = ["preserve_order"] }
termsize = "0.1.9"
libloading = "0.8.0"
chrono = { version = "0.4.41", features = ["alloc"] }
